Added all the HTML content, a little CSS

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,38 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-  <head lang="en">
+<head lang="en">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Design Co</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
+    <link rel="stylesheet" href="screen.css">
+</head>
+<body>
+    <header>
+        <img class="headerimg" src="designco-logo.png" width="512" height="85" alt="Happy Happy Joy Joy" />
+        <a class="headerlinks" href="https://google.com">Home</a>
+        <a class="headerlinks" href="https://google.com">Portfolio</a>
+        <a class="headerlinks" href="https://google.com">About</a>
+        <a class="headerlinks" href="https://google.com">Content</a>
+        <img class="headerimg" src="icon-search.png" width="54" height="54" alt="Happy Happy Joy" />
+    </header>
+
+    <imagebox>
+        <img src="image1.jpg" width="259" height="194" />
+        <img src="image2.jpg" width="278" height="182" />
+        <img src="image3.jpg" width="525" height="394" />
+        <img src="image4.jpg" width="386" height="130" />
+        <img src="image5.jpg" width="225" height="225" />
+    </imagebox>
+
+    <h1>The Details Matter</h1>
+    <h3>We're making beautiful website layouts using modern methods.</h3>
+    <h4 class="aside">What's new?</h4>
+    <p>We always have new projects that clients hire us for</p>
+    <a href="https://google.com">View recent projects</a>
+    <h4>Modern layouts</h4>
+    <p class="footer">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+
+</body>
 </html>
