--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <div>
         <ul>
-            <li class="navbar"><img  src="designco-logo.png" width="256" height="42" alt="Happy Happy Joy Joy" /></li>
+            <li class="navbar"><img src="designco-logo.png" width="256" height="42" alt="Happy Happy Joy Joy" /></li>
             <li class="navbar"><a href="https://google.com">Home</a></li>
             <li class="navbar"><a href="https://google.com">Portfolio</a></li>
             <li class="navbar"><a href="https://google.com">About</a></li>
@@ -35,17 +35,22 @@
         <img class="imgbox" src="image4.jpg" width="265" height="150" />
         <img class="imgbox" src="image5.jpg" width="265" height="150" />
     </imagebox2>
-
-    <h4 class="aside">What's new?</h4>
-    <a class="aside" href="https://google.com"> View recent projects</a>
-    <p class="aside"> We always have new projects that clients hire us for</p>
-
-    <h4 class="row1">Modern layouts</h4>
-    <ol>
-        <li class="row1"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</li>
-        <li> laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</li>
-        <li> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</li>
-    </ol>
-
+    <footer>
+        <div>
+            <h4 class="aside">What's new?</h4>
+            <a class="aside" href="https://google.com"> View recent projects</a>
+            <p class="aside"> We always have new projects that clients hire us for</p>
+        </div>
+        <div>
+            <h4>Modern layouts</h4>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        </div>
+        <div>
+        <p> laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
+            </div>
+        <div>
+            <p> pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+    </footer>
 </body>
 </html>
