reorganized and deleted commands that were experimented with but ended up not being used

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
 
     <div>
         <ul>
-            <li class="navbar"><img src="designco-logo.png" width="256" height="42" alt="Happy Happy Joy Joy" /></li>
-            <li class="navbar"><a href="https://google.com">Home</a></li>
-            <li class="navbar"><a href="https://google.com">Portfolio</a></li>
-            <li class="navbar"><a href="https://google.com">About</a></li>
-            <li class="navbar"><a href="https://google.com">Content</a></li>
+            <li><img src="designco-logo.png" width="256" height="42" alt="Happy Happy Joy Joy" /></li>
+            <li><a href="https://google.com">Home</a></li>
+            <li><a href="https://google.com">Portfolio</a></li>
+            <li><a href="https://google.com">About</a></li>
+            <li><a href="https://google.com">Content</a></li>
         </ul>
 
         <img class="eyeglass" src="icon-search.png" width="54" height="54" alt="Happy Happy Joy" />
